--- a/src/_includes/base-new.njk
+++ b/src/_includes/base-new.njk
@@ -28,7 +28,7 @@
       indexOpen: false,
       audienceDropdownOpen: false,
       menuOpen: false,
-      notifyOpen: false,
+      notifyOpen: true,
       newNotifications: true
     }">
     <div class="relative z-10 bg-white" >
