--- a/src/_includes/partials/notifications.njk
+++ b/src/_includes/partials/notifications.njk
@@ -67,9 +67,9 @@
         </div>
         <div class="sticky inset-x-0 bottom-0 h-3 bg-gradient-to-t from-gray-100 to-transparent"></div>
       </div>
-      <div class="pb-2 px-clamp-gap sm:px-6">
+      <div class="px-clamp-gap sm:px-6">
         <div x-show="!newNotifications" class="border-t border-gray-200"></div>
-        <a href="#" class="flex items-center gap-2 py-3 text-lg text-blue-500 -mx-clamp-gap px-clamp-gap sm:fine:hover:-mx-6 sm:fine:hover:px-6 fine:hover:bg-blue-500 fine:hover:text-white">
+        <a href="#" class="flex items-center gap-2 py-3 text-lg text-blue-500 rounded-b-lg -mx-clamp-gap px-clamp-gap sm:fine:hover:-mx-6 sm:fine:hover:px-6 fine:hover:bg-blue-500 fine:hover:text-white">
           {{ '/src/_includes/svg/icons/logout.svg' | svgContents() | safe }}
           <span>Logg ut</span>
         </a>
