--- a/src/_includes/partials/header-new.njk
+++ b/src/_includes/partials/header-new.njk
@@ -2,10 +2,38 @@
 
 <header class="relative z-40 grid bg-white grid-cols-layout shadow-border" >
 
+  {# Audience Dropdown #}
+  <div class="relative z-50 grid justify-center bg-gray-100 isolate col-full md:hidden">
+    <button class="flex items-center fine:hover:underline text-lg justify-center gap-2 px-4 w-full py-1.5 focus:outline-none focus-visible:text-white focus-visible:bg-blue-500" x-on:click="audienceDropdownOpen = !audienceDropdownOpen">
+      {%- if ('samarbeidspartner' in page.fileSlug) -%}
+      <span>{{ menu.audience[2].title }}</span>
+      {%- elif ('arbeidsgiver' in page.fileSlug) -%}
+      <span>{{ menu.audience[1].title }}</span>
+      {%- elif (not 'produktoversikt-' in page.fileSlug) -%}
+      <span>{{ menu.audience[0].title }}</span>
+      {%- endif -%}
+      {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('w-4 h-4') | safe }}
+    </button>
+    <div class="absolute z-50 w-full -translate-x-1/2 left-1/2 top-full">
+      <div class="grid items-start bg-gray-100 grid-cols-layout">
+        <ul class="grid pt-4 pb-6 text-gray-900 xs:grid-flow-col auto-cols-fr gap-y-1 gap-x-2 col-wide"  x-show="audienceDropdownOpen" x-on:click.outside="audienceDropdownOpen = false">
+          {%- for item in audience -%}
+            <li class="grid flex-1">
+              <a x-on:click="audienceDropdownOpen = false" href="{{ item.href or '#' }}" class="py-2 px-3 bg-white border-2 rounded-lg focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 {{ 'border-blue-500' if activeRole === item.title or activeRole === '' else 'border-transparent fine:hover:border-gray-400' }}">
+                {{ item.title | safe }}
+              </a>
+            </li>
+          {%- endfor -%}
+        </ul>
+      </div>
+    </div>
+  </div>
+
+
   <nav class="flex items-center w-full gap-8 col-wide">
     {# Logo #}
     <a href="/" class="text-red-500 fine:hover:text-red-400 block focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 py-2.5 px-2 -ml-2 rounded-sm">
-      {{ '/src/_includes/svg/logo.svg' | svgContents('w-[75px] h-auto') | safe }}
+      {{ '/src/_includes/svg/logo.svg' | svgContents('w-16 sm:w-[75px] h-auto') | safe }}
       <span class="sr-only">NAV</span>
     </a>
 
@@ -14,7 +42,7 @@
       <ul class="flex justify-center gap-4 text-lg">
         {%- for item in audience -%}
           <li class="grid">
-            <a href="{{ item.href or '#' }}" class="focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 flex items-center px-0.5 pb-5 text-gray-900 border-b-4 pt-6 {{ 'border-blue-500' if activeRole === item.title else 'border-transparent fine:hover:border-gray-300/75 opacity-70' }}">
+            <a href="{{ item.href or '#' }}" class="focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 flex items-center px-0.5 pb-5 text-gray-900 border-b-4 pt-6 {{ 'border-blue-500 font-semibold' if activeRole === item.title else 'border-transparent fine:hover:border-gray-300/75 opacity-70' }}">
               {{ item.title }} {{ item.active }}
             </a>
           </li>
@@ -23,25 +51,25 @@
     </div>
 
     {# Menu Buttons #}
-    {%- set menuButtonClasses = "flex flex-col sm:flex-row items-center justify-center py-1.5 pl-2.5 pr-3 leading-none font-semibold gap-1 text-blue-500 rounded min-w-16 sm:py-2.5 sm:text-lg fine:hover:bg-deepblue-50 focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 group" -%}
-    <div class="flex items-end gap-1.5 ml-auto py-1 sm:py-3 -mr-2 sm:mr-0">
+    {%- set menuButtonClasses = "flex flex-col sm:flex-row items-center justify-center p-1 sm:pl-2.5 sm:pr-3 leading-none font-semibold gap-0.5 text-blue-500 rounded min-w-16 sm:py-2.5 sm:text-lg fine:hover:bg-deepblue-50 focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 group" -%}
+    <div class="flex items-end gap-1.5 ml-auto py-1.5 -mt-px -mr-2 sm:py-3 sm:mr-0 sm:gap-2">
       <button class="{{ menuButtonClasses }}" x-on:click="notifyOpen = !notifyOpen, menuOpen = false" x-bind:class="notifyOpen && 'bg-deepblue-50'">
         <span class="relative">
-          {{ '/src/_includes/svg/icons/person-circle.svg' | svgContents('w-7 h-7') | safe }}
-          <span x-show="newNotifications" class="absolute right-0 block w-2 h-2 bg-red-400 rounded-full top-0.5" x-bind:class="notifyOpen ? 'ring-2 ring-deepblue-50' : 'ring-2 ring-white fine:group-hover:ring-deepblue-50'"></span>
+          {{ '/src/_includes/svg/icons/person-circle.svg' | svgContents('w-6 h-6 sm:w-7 sm:h-7 shrink-0 pointer-events-none') | safe }}
+          <span x-show="newNotifications" class="absolute right-0 block w-1.5 h-1.5 sm:w-2 sm:h-2 bg-red-400 rounded-full top-0.5" x-bind:class="notifyOpen ? 'ring-2 ring-deepblue-50' : 'ring-2 ring-white fine:group-hover:ring-deepblue-50'"></span>
         </span>
         <span class="mt-px sm:hidden">Min side</span>
         <span class="hidden mt-px sm:inline-block">Isac Norland</span>
       </button>
 
-      <span class="self-stretch w-px my-2 bg-gray-300 sm:m-1" aria-hidden="true"></span>
+      <span class="self-stretch hidden w-px my-2 bg-gray-300 sm:m-1 sm:block" aria-hidden="true"></span>
 
       <button class="{{ menuButtonClasses }}" type="button" x-on:click="menuOpen = !menuOpen, notifyOpen = false" x-bind:class="menuOpen && 'bg-deepblue-50'">
         <template x-if="!menuOpen">
-          {{ '/src/_includes/svg/icons/menusearch.svg' | svgContents('w-7 h-7 shrink-0 pointer-events-none') | safe }}
+          {{ '/src/_includes/svg/icons/menusearch.svg' | svgContents('w-6 h-6 sm:w-7 sm:h-7 shrink-0 pointer-events-none') | safe }}
         </template>
         <template x-if="menuOpen">
-          {{ '/src/_includes/svg/icons/close.svg' | svgContents('w-7 h-7 shrink-0 pointer-events-none') | safe }}
+          {{ '/src/_includes/svg/icons/close.svg' | svgContents('w-6 h-6 sm:w-7 sm:h-7 shrink-0 pointer-events-none') | safe }}
         </template>
         <span class="mt-px">Meny</span>
       </button>
@@ -49,32 +77,6 @@
   </nav>
 </header>
 
-{# Audience Dropdown #}
-<div class="relative z-50 grid justify-center bg-gray-100 isolate col-full md:hidden">
-  <button class="flex items-center fine:hover:underline text-lg justify-center gap-2 px-4 w-full py-1.5 focus:outline-none focus-visible:text-white focus-visible:bg-blue-500" x-on:click="audienceDropdownOpen = !audienceDropdownOpen">
-    {%- if ('samarbeidspartner' in page.fileSlug) -%}
-    <span>{{ menu.audience[2].title }}</span>
-    {%- elif ('arbeidsgiver' in page.fileSlug) -%}
-    <span>{{ menu.audience[1].title }}</span>
-    {%- elif (not 'produktoversikt-' in page.fileSlug) -%}
-    <span>{{ menu.audience[0].title }}</span>
-    {%- endif -%}
-    {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('w-4 h-4') | safe }}
-  </button>
-  <div class="absolute z-50 w-full -translate-x-1/2 left-1/2 top-full">
-    <div class="grid items-start bg-gray-100 grid-cols-layout">
-      <ul class="grid pt-4 pb-6 text-gray-900 sm:grid-flow-col auto-cols-fr gap-y-1 gap-x-3 col-wide"  x-show="audienceDropdownOpen" x-on:click.outside="audienceDropdownOpen = false">
-        {%- for item in audience -%}
-          <li class="grid flex-1">
-            <a x-on:click="audienceDropdownOpen = false" href="{{ item.href or '#' }}" class="py-2 px-3 bg-white border-2 rounded-lg focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 {{ 'border-blue-500' if activeRole === item.title or activeRole === '' else 'border-transparent fine:hover:border-gray-400' }}">
-              {{ item.title | safe }}
-            </a>
-          </li>
-        {%- endfor -%}
-      </ul>
-    </div>
-  </div>
-</div>
 
 
 {%- include "partials/navigation.njk" -%}
