--- a/src/_includes/partials/header-new.njk
+++ b/src/_includes/partials/header-new.njk
@@ -1,10 +1,10 @@
 {%- set audience = audienceOverride or menu.audience -%}
 
-<header class="relative z-40 grid bg-white grid-cols-layout shadow-border" >
+<header class="relative z-50 grid bg-white grid-cols-layout shadow-border" >
 
   {# Audience Dropdown #}
   <div class="relative z-50 grid justify-center bg-gray-100 isolate col-full md:hidden">
-    <button class="flex items-center fine:hover:underline text-lg justify-center gap-2 px-4 w-full py-1.5 focus:outline-none focus-visible:text-white focus-visible:bg-blue-500" x-on:click="audienceDropdownOpen = !audienceDropdownOpen">
+    <button class="flex items-center fine:hover:underline text-lg justify-center gap-2 px-4 w-full py-1.5 focus:outline-none focus-visible:text-white focus-visible:bg-blue-500" x-on:click="audienceDropdownOpen = !audienceDropdownOpen, menuOpen = false, notifyOpen = false">
       {%- if ('samarbeidspartner' in page.fileSlug) -%}
       <span>{{ menu.audience[2].title }}</span>
       {%- elif ('arbeidsgiver' in page.fileSlug) -%}
@@ -51,7 +51,7 @@
     </div>
 
     {# Menu Buttons #}
-    {%- set menuButtonClasses = "flex flex-col sm:flex-row items-center justify-center p-1 sm:pl-2.5 sm:pr-3 leading-none font-semibold gap-0.5 text-blue-500 rounded min-w-16 sm:py-2.5 sm:text-lg fine:hover:bg-deepblue-50 focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 group" -%}
+    {%- set menuButtonClasses = "flex flex-col sm:flex-row items-center justify-center p-1 sm:pl-2.5 sm:pr-3 leading-none font-semibold gap-0.5 text-blue-500 rounded min-w-16 sm:py-2 sm:text-lg fine:hover:bg-deepblue-50 focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 group" -%}
     <div class="flex items-end gap-1.5 ml-auto py-1.5 -mt-px -mr-2 sm:py-3 sm:mr-0 sm:gap-2">
       <button class="{{ menuButtonClasses }}" x-on:click="notifyOpen = !notifyOpen, menuOpen = false" x-bind:class="notifyOpen && 'bg-deepblue-50'">
         <span class="relative">
@@ -83,4 +83,4 @@
 {%- include "partials/notifications.njk" -%}
 
 {# Overlay #}
-<button class="fixed inset-0 z-30 w-full h-full bg-black/50" x-bind:class="(menuOpen || notifyOpen) ? 'animate-fade-in' : 'hidden'" x-on:click="menuOpen = false, notifyOpen = false" x-on:keyup.escape.window="menuOpen = false, notifyOpen = false"></button>
+<button class="fixed inset-0 z-30 w-full h-full bg-black/50" x-bind:class="(menuOpen || notifyOpen || audienceDropdownOpen) ? 'animate-fade-in' : 'hidden'" x-on:click="menuOpen = false, notifyOpen = false, audienceDropdownOpen = false" x-on:keyup.escape.window="menuOpen = false, notifyOpen = false, audienceDropdownOpen = false"></button>
