--- a/src/pages/soknad-og-skjema/dagpenger/dagpenger.njk
+++ b/src/pages/soknad-og-skjema/dagpenger/dagpenger.njk
@@ -5,6 +5,23 @@ kicker: 'Søknad'
 tags: ['template']
 permalink: "/soknad-og-skjema/{{ page.fileSlug }}/"
 order: 7
+fileList:
+  -
+    title: Søknad om dagpenger når du er arbeidsledig
+    type: PDF
+    filesize: 100 kB
+  -
+    title: Søknad om dagpenger når du er permittert
+    type: PDF
+    filesize: 100 kB
+  -
+    title: Søknad om å gjenoppta dagpenger når du er permittert
+    type: PDF
+    filesize: 100 kB
+  -
+    title: Søknad om å gjenoppta dagpenger når du er permittert
+    type: PDF
+    filesize: 100 kB
 ---
 {%- extends 'base-basic.njk' -%}
 
@@ -125,7 +142,21 @@ order: 7
               </ul>
             </fieldset>
             <div x-show="applicationStep === 3">
-              PDF-filer her
+              <h3 class="text-xl font-semibold">Last ned papirsøknad</h3>
+              <p class="mt-1">Du skriver ut en papirsøknad som du fyller ut for hånd og sender i posten. Du trenger ikke å logge inn.</p>
+              <ul class="grid gap-2 mt-8 justify-items-start">
+                {% for item in fileList %}
+                  <li class="py-1">
+                    <a href="#" class="flex items-start gap-2 text-blue-500 fine:hover:text-deepblue-600 group">
+                      {{ '/src/_includes/svg/icons/download.svg' | svgContents('w-6 h-6 shrink-0 translate-y-0.5') | safe }}
+                      <span class="grid">
+                        <span class="font-semibold underline group-hover:no-underline">{{ item.title }}</span>
+                        <span class="text-base text-gray-700">{{ item.type }} {{ item.filesize }}</span>
+                      </span>
+                    </a>
+                  </li>
+                {% endfor %}
+              </ul>
             </div>
             <div class="mt-7" x-show="(applicationStep === 1) && (applicationFormat === 'post')">
               <button
