--- a/src/pages/produktoversikt/samarbeidspartner/rolle.njk
+++ b/src/pages/produktoversikt/samarbeidspartner/rolle.njk
@@ -8,7 +8,8 @@
     alias: "role",
   },
   eleventyComputed: {
-    permalink: "/produktoversikt-samarbeidspartner/{{ role | slugify }}/index.html"
+    roleSlug: "{{ role | slugify }}",
+    permalink: "/produktoversikt-samarbeidspartner/{{ role | slugify }}/"
   }
 }
 ---
@@ -20,11 +21,28 @@
 {%- from "macros/microcard.njk" import microcard -%}
 {%- from "macros/filterGroup.njk" import filterGroup -%}
 
+{% macro rolePills(roleTitle) %}
+  <fieldset class="">
+    <legend class="text-sm tracking-widest uppercase opacity-70">{{ roleTitle }}</legend>
+    <ul class="flex flex-wrap items-start mt-2.5 gap-x-2 gap-y-3">
+      {%- for item in roleFilter -%}
+      <li>
+        <a
+          href="/produktoversikt-samarbeidspartner/{{ item | slugify }}/"
+          x-bind:href="'/person/prototype/produktoversikt-samarbeidspartner/{{ item | slugify }}/?type=' + typeFilter"
+          class="inline-flex cursor-pointer px-4 pt-1.5 pb-1.5 leading-tight text-base text-left rounded-full focus:ring-2 {{ 'text-white bg-deepblue-500' if (item | slugify) === (roleSlug) else 'bg-deepblue-50 fine:hover:bg-deepblue-100' }}"
+        >{{ item | safe }}</a>
+      </li>
+      {%- endfor -%}
+    </ul>
+  </fieldset>
+{% endmacro %}
+
 
 {%- set productsLength = products | filterByRole(role) | length -%}
 
 {%- block content -%}
-  <main class="py-8 text-lg text-gray-900 md:py-12"
+  <main class="grid py-12 text-lg text-gray-900 grid-cols-layout"
     x-data="{
       typeFilter: new URLSearchParams(location.search).get('type') || 'alle',
       filterItem(el) {
@@ -65,39 +83,27 @@
       });
       updateCount()"
   >
-    <div class="grid grid-cols-layout">
-      <div class="relative w-full col-narrow lg:col-wide">
+    <div class="relative col-wide max-w-prose md:max-w-none mx-auto md:mx-0 grid md:grid-cols-[6rem_auto] gap-x-8 items-start mb-12 w-full">
 
-        <div class="hidden float-right pb-8 mt-2 ml-24 xs:block sm:pb-0 sm:-mb-8">
-          {{ '/src/_includes/svg/pictograms/support.svg' | svgContents('w-[12vw] h-auto overflow-hidden max-w-[7rem]') | safe }}
-        </div>
+      {# Pictogram #}
+      {{ '/src/_includes/svg/pictograms/support.svg' | svgContents('w-full h-auto max-w-20 md:ml-2 text-green-800 absolute right-0 md:relative') | safe }}
 
-        {# <a href="../" class="font-semibold text-blue-500">Alle roller</a> #}
+      {# Intro #}
+      <div class="pr-28 md:col-start-2 md:row-start-1 md:pr-0">
         <h1 class="text-3xl font-semibold leading-tight md:text-5xl md:leading-tight">{{ title | safe }}</h1>
-
-        <p class="max-w-2xl mt-2 text-xl md:mt-3 md:text-2xl">{{ description | safe }}</p>
+        <p class="mt-2 text-sm tracking-wider text-gray-700 uppercase">{{ kicker | safe }}</p>
+        <p class="max-w-2xl mt-8 text-xl md:mt-3 md:text-2xl">{{ description | safe }}</p>
       </div>
-    </div>
-
-    <div class="grid grid-cols-layout">
-
-      <div class="grid w-full gap-8 pb-20 mt-10 lg:gap-x-16 lg:items-start lg:grid-flow-dense lg:grid-cols-sidebar col-narrow lg:col-wide lg:auto-rows-min">
-
-        <div class="lg:col-span-2 lg:mr-24">
-          <ul class="flex flex-wrap gap-2 text-lg md:text-xl">
-            {%- for item in roleFilter -%}
-              <li class="">
-                <a class="relative z-10 flex px-5 py-2 border border-gray-300 rounded-full {{ 'bg-deepblue-600 text-white' if (item | slugify) === (role | slugify) else 'fine:hover:bg-blue-50' }}" href="/produktoversikt-samarbeidspartner/{{ item | slugify }}/">{{ item | safe }}</a>
-              </li>
-            {%- endfor -%}
-          </ul>
-        </div>
-
 
         {%- if productsLength > 10 -%}
-        <div class="relative lg:row-start-2 lg:col-start-2" x-data="{ filterDrawer: false }">
+        {%- endif -%}
+
+      <div class="md:col-start-2 md:grid md:grid-cols-[2fr_1fr] gap-x-16 items-start gap-4 mt-8">
+
+        <div class="md:col-start-2 md:row-start-1" x-data="{ filterDrawer: false }">
+
           <button
-            class="flex items-center justify-start gap-2.5 pl-3 pr-4 py-3 leading-none text-blue-600 bg-white rounded ring-2 ring-blue-500 hover:bg-blue-100 hover:text-blue-700 lg:hidden"
+            class="flex items-center mb-8 justify-start gap-2.5 pl-3 pr-4 py-3 leading-none text-blue-600 bg-white rounded ring-2 ring-blue-500 hover:bg-blue-100 hover:text-blue-700 md:hidden"
             x-on:click="filterDrawer = true"
             x-bind:aria-expanded="filterDrawer">
             {{ '/src/_includes/svg/icons/filter.svg' | svgContents('w-5 h-5') | safe }}
@@ -105,7 +111,7 @@
           </button>
 
           <div
-            class="fixed inset-y-0 right-0 z-50 w-10/12 max-w-md lg:hidden"
+            class="fixed inset-y-0 right-0 z-50 w-10/12 max-w-md md:hidden"
             x-show="filterDrawer"
             x-transition:enter="transition ease-out duration-300"
             x-transition:enter-start="translate-x-full opacity-0"
@@ -114,9 +120,17 @@
             x-transition:leave-start="translate-x-0 opacity-100"
             x-transition:leave-end="translate-x-full opacity-0"
           >
-            <form class="flex flex-col h-full bg-white shadow-drawer col-narrow lg:hidden" x-on:click.outside="filterDrawer = false, filterTags = false">
+            <form class="flex flex-col h-full bg-white shadow-drawer col-narrow md:hidden" x-on:click.outside="filterDrawer = false, filterTags = false">
               <div class="flex-1 px-6 pb-12 overflow-y-auto overscroll-y-contain">
-                <div class="relative grid pt-6" >
+                <div class="relative grid gap-8 pt-6" >
+                  {{ rolePills('Velg rolle') }}
+                  {{ filterGroup({
+                    array: typeFilter,
+                    title: 'Velg type',
+                    value: 'typeFilter',
+                    showAll: true
+                  }) }}
+
                   <div>
                     <label for="searchFilter-mobile" class="text-sm tracking-widest uppercase opacity-70">Søk</label>
                     <div class="relative mt-1">
@@ -126,15 +140,10 @@
                       <input id="searchFilter-mobile" type="search" x-model="search" class=" w-full pl-10 pr-3 py-2.5 border border-gray-300 rounded shadow-inner bg-gray-50/50 focus:outline-none focus:ring-2 focus:ring-blue-800">
                     </div>
                   </div>
-                  {{ filterGroup({
-                    array: typeFilter,
-                    title: 'Velg type',
-                    value: 'typeFilter'
-                  }) }}
                 </div>
               </div>
               <div class="sticky bottom-0 h-2 -mt-2 pointer-events-none bg-gradient-to-t from-black/10 to-black/0"></div>
-              <div class="py-4 px-clamp-gap md:px-6 bg-gray-50">
+              <div class="px-6 py-4 bg-gray-50">
                 <button type="button" class="w-full px-4 py-2 text-white bg-blue-500 rounded-lg" x-on:click="filterTags = false, filterDrawer = false">Vis resultat (<span x-text="count"></span>)</button>
               </div>
             </form>
@@ -154,9 +163,16 @@
             <span class="sr-only">Lukk</span>
           </button>
 
-          <div class="hidden lg:block md:mt-4">
-            <div class="relative">
-              <label for="searchFilter-mobile" class="text-sm tracking-widest uppercase opacity-70">Søk</label>
+          <div class="hidden gap-8 md:grid">
+            {{ rolePills('Velg rolle') }}
+            {{ filterGroup({
+              array: typeFilter,
+              title: 'Velg type',
+              value: 'typeFilter',
+              showAll: true
+            }) }}
+            <div class="">
+              <label for="searchFilter-desktop" class="text-sm tracking-widest uppercase opacity-70">Søk</label>
               <div class="relative mt-1">
                 <span class="absolute inset-y-0 left-0 grid px-2.5 place-items-center">
                   {{ '/src/_includes/svg/icons/search.svg' | svgContents('w-6 h-6') | safe }}
@@ -164,34 +180,27 @@
                 <input id="searchFilter-desktop" type="search" x-model="search" class="w-full max-w-xl pl-10 pr-3 py-2.5 border border-gray-300 rounded shadow-inner bg-gray-50/50 focus:outline-none focus:ring focus:ring-blue-800">
               </div>
             </div>
-            {{ filterGroup({
-              array: typeFilter,
-              title: 'Velg type',
-              value: 'typeFilter'
-            }) }}
           </div>
         </div>
-        {%- endif -%}
 
-        <div class="lg:col-start-1 lg:row-span-3">
+        <div class="md:col-start-1 md:row-start-1">
+          <p class="mt-3 mb-2">Viser <span x-text="count"></span> av {{ productsLength }} ytelser og tjenester</p>
 
-          <p class="mt-3 mb-2">Viser <span x-text="count"></span> av {{ productsLength }} produkter og tjenester</p>
-
-          <div class="border-b border-deepblue-100 -mx-clamp-gap sm:mx-0 py-0.5" x-ref="entries" x-show="count !== 0">
+          <div class="border-b border-deepblue-100" x-ref="entries" x-show="count !== 0">
             {%- for product in products | sort(true, false, 'title') | reverse -%}
               {%- if role in product.role -%}
               <div
                 x-data="{ expanded: false }"
-                class="relative z-10 border-t border-gray-200 fine:hover:z-20"
+                class="border-t focus-within:z-10 c-product-tile border-deepblue-100"
                 x-show="filterItem($el)"
                 data-type="alle {% for item in product.type %}{{ item | slugify }} {% endfor %}"
               >
-                <div
-                  class="relative flex items-center gap-4 py-5 text-left rounded-lg px-clamp-gap sm:px-4 focus-within:z-20"
-                  x-bind:class="expanded ? 'bg-deepblue-50 ring-1 ring-deepblue-50 fine:hover:bg-deepblue-100' : 'fine:hover:bg-deepblue-100'">
+                <div class="relative flex items-center gap-4 p-4 pr-8 text-left rounded-lg md:py-6 focus-within:z-20" x-bind:class="expanded ? 'bg-deepblue-50 ring-1 ring-deepblue-50 fine:hover:bg-deepblue-100' : 'fine:hover:bg-deepblue-100'">
+
                   {%- if product.icon -%}
                     {{ product.icon | svgContents('w-12 h-12 shrink-0') | safe }}
                   {%- endif -%}
+
                   <div class="grid gap-1">
                     <h2 class="text-xl font-semibold leading-tight">
                       {{ product.title | safe }}
@@ -201,11 +210,6 @@
                       <span>{{ item }}</span>{{ ', ' if product.type.length > 1 and not loop.last }}
                     {%- endfor -%}
                     </p>
-                    {# <p class="text-base">
-                      {%- for item in product.role -%}
-                        <span class="">{{ item }}</span>{{ ', ' if loop.length > 1 and not loop.last }}
-                      {%- endfor -%}
-                    </p> #}
                   </div>
                     <button
                       type="button"
