--- a/src/pages/soknad-og-skjema/dagpenger/dagpenger.njk
+++ b/src/pages/soknad-og-skjema/dagpenger/dagpenger.njk
@@ -31,10 +31,10 @@ fileList:
 
 {%- block content -%}
   <main class="grid py-8 md:py-12 text-lg grid-cols-layout min-h-[70vh]" x-data="{ stepperOpen: false }">
-    <div class="relative col-wide max-w-prose md:max-w-none mx-auto md:mx-0 grid md:grid-cols-[6rem_auto] gap-x-8 items-start mb-12 w-full auto-rows-min">
+    <div class="relative col-wide max-w-prose md:max-w-none mx-auto md:mx-0 md:grid md:grid-cols-[6rem_auto] md:gap-8 items-start mb-12 w-full auto-rows-min">
 
       {# Pictogram #}
-      {{ '/src/_includes/svg/pictograms/soknad-og-skjema.svg' | svgContents('w-full h-auto max-w-20 md:ml-2 text-green-800 absolute right-0 md:relative hidden xs:block') | safe }}
+      {{ '/src/_includes/svg/pictograms/soknad-og-skjema.svg' | svgContents('w-full h-auto max-w-20 md:ml-2 text-green-800 float-right ml-8') | safe }}
 
       {# Intro #}
       <div class="md:col-start-2 md:row-start-1">
@@ -144,10 +144,10 @@ fileList:
             <div x-show="applicationStep === 3">
               <h3 class="text-xl font-semibold">Last ned papirsøknad</h3>
               <p class="mt-1">Du skriver ut en papirsøknad som du fyller ut for hånd og sender i posten. Du trenger ikke å logge inn.</p>
-              <ul class="grid gap-2 mt-8 justify-items-start">
+              <ul class="grid gap-1.5 mt-8">
                 {% for item in fileList %}
-                  <li class="py-1">
-                    <a href="#" class="flex items-start gap-2 text-blue-500 fine:hover:text-deepblue-600 group">
+                  <li>
+                    <a href="#" class="flex items-start gap-2 pt-2 pb-1.5 pl-3 pr-6 text-blue-500 rounded-lg bg-gray-100 fine:hover:text-deepblue-600 group fine:hover:bg-gray-50">
                       {{ '/src/_includes/svg/icons/download.svg' | svgContents('w-6 h-6 shrink-0 translate-y-0.5') | safe }}
                       <span class="grid">
                         <span class="font-semibold underline group-hover:no-underline">{{ item.title }}</span>
