--- a/src/pages/soknad/aap/aap.njk
+++ b/src/pages/soknad/aap/aap.njk
@@ -3,7 +3,7 @@ type: 'Mellomsteg'
 title: Søk om arbeids&shy;avklarings&shy;penger (AAP)
 kicker: Søknad
 tags: ['template']
-permalink: "/soknad-og-skjema/{{ page.fileSlug }}/"
+permalink: "/soknad/{{ page.fileSlug }}/"
 order: 7
 ---
 {%- extends 'base-basic.njk' -%}
@@ -57,7 +57,7 @@ order: 7
               </ul>
             </fieldset>
             <div class="mt-7">
-              <a class="inline-flex px-6 py-2.5 text-white bg-blue-500 fine:hover:bg-blue-600 rounded focus-visible:outline-none focus-visible:ring focus-visible:ring-blue-800 focus-visible:ring-offset-1 focus-visible:ring-offset-white" href="/soknad-og-skjema/aap/intro/">Neste</a>
+              <a class="inline-flex px-6 py-2.5 text-white bg-blue-500 fine:hover:bg-blue-600 rounded focus-visible:outline-none focus-visible:ring focus-visible:ring-blue-800 focus-visible:ring-offset-1 focus-visible:ring-offset-white" href="/soknad/aap/intro/">Neste</a>
             </div>
           </form>
         </div>
