--- a/src/pages/soknad/foreldrepenger.njk
+++ b/src/pages/soknad/foreldrepenger.njk
@@ -4,7 +4,7 @@ title: 'Søk om foreldrepenger'
 kicker: 'Søknad'
 form: 'NAV-XXXXXX'
 tags: ['template']
-permalink: "/soknad-og-skjema/{{ page.fileSlug }}/"
+permalink: "/soknad/{{ page.fileSlug }}/"
 order: 8
 ---
 {%- extends 'base-basic.njk' -%}
