--- a/src/pages/soknad-og-skjema/privat/privat.njk
+++ b/src/pages/soknad-og-skjema/privat/privat.njk
@@ -1,19 +1,13 @@
----js
-{
-  title: 'Søknad og skjema fra A til Å',
-  description: 'Pengestøtter og tjenester fra NAV for samarbeidspartnere. Du kan søke eller filtrere etter type og rolle.',
-  pagination: {
-    data: "roleFilter",
-    size: 1,
-    alias: "role",
-  },
-  eleventyComputed: {
-    roleSlug: "{{ role | slugify }}",
-    permalink: "/produktoversikt-samarbeidspartner/{{ role | slugify }}/"
-  }
-}
 ---
-
+type: 'Oversikt'
+title: 'Søknad og skjema'
+kicker: 'Fra A til Å'
+description: 'Velg pengestøtten eller tjenesten det gjelder. Du kan søke eller velge type og område.'
+tags: ['template']
+order: '5'
+activeRole: "Privat"
+permalink: "/soknad-og-skjema/"
+---
 {%- extends 'base.njk' -%}
 
 {%- from "macros/button.njk" import button -%}
@@ -21,38 +15,23 @@
 {%- from "macros/microcard.njk" import microcard -%}
 {%- from "macros/filterGroup.njk" import filterGroup -%}
 
-{% macro rolePills(roleTitle) %}
-  <fieldset class="">
-    <legend class="text-sm tracking-widest uppercase opacity-70">{{ roleTitle }}</legend>
-    <ul class="flex flex-wrap items-start mt-2.5 gap-x-2 gap-y-3">
-      {%- for item in roleFilter -%}
-      <li>
-        <a
-          href="/produktoversikt-samarbeidspartner/{{ item | slugify }}/"
-          x-bind:href="'/person/prototype/produktoversikt-samarbeidspartner/{{ item | slugify }}/?type=' + typeFilter"
-          class="inline-flex cursor-pointer px-4 pt-1.5 pb-1.5 leading-tight text-base text-left rounded-full focus:ring-2 {{ 'text-white bg-deepblue-500' if (item | slugify) === (roleSlug) else 'bg-deepblue-50 fine:hover:bg-deepblue-100' }}"
-        >{{ item | safe }}</a>
-      </li>
-      {%- endfor -%}
-    </ul>
-  </fieldset>
-{% endmacro %}
-
-
-{%- set productsLength = products | filterByRole(role) | length -%}
-
 {%- block content -%}
-  <main class="grid py-12 text-lg text-gray-900 grid-cols-layout"
+  <main
+    class="grid py-8 text-lg md:py-12 grid-cols-layout"
     x-data="{
       typeFilter: new URLSearchParams(location.search).get('type') || 'alle',
+      areaFilter: new URLSearchParams(location.search).get('area') || 'alle',
       filterItem(el) {
         const item = el.querySelector('h2').textContent.toLowerCase()
         if (this.search === '') {
           return (
-            el.dataset.type.split(' ').includes(this.typeFilter)
+            el.dataset.type.includes(this.typeFilter)
+            &&
+            el.dataset.area.includes(this.areaFilter)
           )
         } else {
           this.typeFilter = 'alle'
+          this.areaFilter = 'alle'
           return (
             item.includes(this.search.toLowerCase())
           )
@@ -78,6 +57,13 @@
         updateCount();
         clearSearch();
       });
+      $watch('areaFilter', (value) => {
+        const url = new URL(window.location.href);
+        url.searchParams.set('area', value);
+        history.replaceState(null, document.title, url.toString());
+        updateCount();
+        clearSearch();
+      });
       $watch('search', (value) => {
         updateCount()
       });
@@ -92,18 +78,16 @@
       <div class="pr-28 md:col-start-2 md:row-start-1 md:pr-0">
         <h1 class="text-3xl font-semibold leading-tight md:text-5xl md:leading-tight">{{ title | safe }}</h1>
         <p class="mt-2 text-sm tracking-wider text-gray-700 uppercase">{{ kicker | safe }}</p>
-        <p class="max-w-2xl mt-8 text-xl md:mt-3 md:text-2xl">{{ description | safe }}</p>
+        <p class="max-w-2xl mt-8 text-xl md:text-2xl">{{ description | safe }}</p>
       </div>
 
-        {%- if productsLength > 10 -%}
-        {%- endif -%}
 
       <div class="md:col-start-2 md:grid md:grid-cols-[2fr_1fr] gap-x-16 items-start gap-4 mt-8">
 
         <div class="md:col-start-2 md:row-start-1" x-data="{ filterDrawer: false }">
-
           <button
-            class="flex items-center mb-8 justify-start gap-2.5 pl-3 pr-4 py-3 leading-none text-blue-600 bg-white rounded ring-2 ring-blue-500 hover:bg-blue-100 hover:text-blue-700 md:hidden"
+            type="button"
+            class="flex items-center justify-start gap-2.5 pl-3 pr-4 py-3 mb-8 leading-none text-blue-600 bg-white rounded ring-2 ring-blue-500 hover:bg-blue-100 hover:text-blue-700 md:hidden"
             x-on:click="filterDrawer = true"
             x-bind:aria-expanded="filterDrawer">
             {{ '/src/_includes/svg/icons/filter.svg' | svgContents('w-5 h-5') | safe }}
@@ -111,7 +95,7 @@
           </button>
 
           <div
-            class="fixed inset-y-0 right-0 z-50 w-10/12 max-w-md md:hidden"
+            class="fixed inset-y-0 right-0 z-50 w-10/12 max-w-md lg:hidden"
             x-show="filterDrawer"
             x-transition:enter="transition ease-out duration-300"
             x-transition:enter-start="translate-x-full opacity-0"
@@ -120,24 +104,28 @@
             x-transition:leave-start="translate-x-0 opacity-100"
             x-transition:leave-end="translate-x-full opacity-0"
           >
-            <form class="flex flex-col h-full bg-white shadow-drawer col-narrow md:hidden" x-on:click.outside="filterDrawer = false, filterTags = false">
+            <form class="flex flex-col h-full bg-white shadow-drawer col-narrow lg:hidden" x-on:click.outside="filterDrawer = false, filterTags = false">
               <div class="flex-1 px-6 pb-12 overflow-y-auto overscroll-y-contain">
-                <div class="relative grid gap-8 pt-6" >
-                  {{ rolePills('Velg rolle') }}
+                <div class="relative grid gap-8 pt-6">
+                  {{ filterGroup({
+                    array: areaFilter,
+                    title: 'Velg område',
+                    value: 'areaFilter',
+                    showAll: true
+                  }) }}
                   {{ filterGroup({
                     array: typeFilter,
                     title: 'Velg type',
                     value: 'typeFilter',
                     showAll: true
                   }) }}
-
                   <div>
                     <label for="searchFilter-mobile" class="text-sm tracking-widest uppercase opacity-70">Søk</label>
                     <div class="relative mt-1">
-                      <span class="absolute inset-y-0 left-0 grid px-2.5 place-items-center">
-                        {{ '/src/_includes/svg/icons/search.svg' | svgContents('w-6 h-6') | safe }}
-                      </span>
-                      <input id="searchFilter-mobile" type="search" x-model="search" class=" w-full pl-10 pr-3 py-2.5 border border-gray-300 rounded shadow-inner bg-gray-50/50 focus:outline-none focus:ring-2 focus:ring-blue-800">
+                    <span class="absolute inset-y-0 left-0 grid px-2.5 place-items-center">
+                      {{ '/src/_includes/svg/icons/search.svg' | svgContents('w-6 h-6') | safe }}
+                    </span>
+                    <input id="searchFilter-mobile" type="search" x-model="search" class=" w-full pl-10 pr-3 py-2.5 border border-gray-300 rounded shadow-inner bg-gray-50/50 focus:outline-none focus:ring-2 focus:ring-blue-800">
                     </div>
                   </div>
                 </div>
@@ -148,6 +136,7 @@
               </div>
             </form>
           </div>
+
           <button
             type="button"
             class="fixed inset-0 z-40 bg-black/25"
@@ -164,14 +153,19 @@
           </button>
 
           <div class="hidden gap-8 md:grid">
-            {{ rolePills('Velg rolle') }}
+            {{ filterGroup({
+              array: areaFilter,
+              title: 'Velg område',
+              value: 'areaFilter',
+                  showAll: true
+            }) }}
             {{ filterGroup({
               array: typeFilter,
               title: 'Velg type',
               value: 'typeFilter',
               showAll: true
             }) }}
-            <div class="">
+            <div>
               <label for="searchFilter-desktop" class="text-sm tracking-widest uppercase opacity-70">Søk</label>
               <div class="relative mt-1">
                 <span class="absolute inset-y-0 left-0 grid px-2.5 place-items-center">
@@ -184,72 +178,79 @@
         </div>
 
         <div class="md:col-start-1 md:row-start-1">
-          <p class="mt-3 mb-2">Viser <span x-text="count"></span> av {{ productsLength }} ytelser og tjenester</p>
+          <p class="mb-2">Viser <span x-text="count"></span> av {{ products.length }} pengestøtter og tjenester</p>
 
           <div class="border-b border-deepblue-100" x-ref="entries" x-show="count !== 0">
             {%- for product in products | sort(true, false, 'title') | reverse -%}
-              {%- if role in product.role -%}
               <div
                 x-data="{ expanded: false }"
-                class="border-t focus-within:z-10 c-product-tile border-deepblue-100"
+                class="border-t focus-within:z-10 border-deepblue-100 c-product-tile"
                 x-show="filterItem($el)"
                 data-type="alle {% for item in product.type %}{{ item | slugify }} {% endfor %}"
-              >
-                <div class="relative flex items-center gap-4 p-4 pr-8 text-left rounded-lg md:py-6 focus-within:z-20" x-bind:class="expanded ? 'bg-deepblue-50 ring-1 ring-deepblue-50 fine:hover:bg-deepblue-100' : 'fine:hover:bg-deepblue-100'">
+                data-area="alle {% for item in product.area %}{{ item | slugify }} {% endfor %}">
 
+                <div class="relative flex items-center gap-4 p-4 pr-8 text-left rounded-lg md:py-6 focus-within:z-20" x-bind:class="expanded ? 'bg-deepblue-50 ring-1 ring-deepblue-50 fine:hover:bg-deepblue-100' : 'fine:hover:bg-deepblue-100'">
                   {%- if product.icon -%}
                     {{ product.icon | svgContents('w-12 h-12 shrink-0') | safe }}
                   {%- endif -%}
-
-                  <div class="grid gap-1">
+                  <div class="grid gap-0.5">
                     <h2 class="text-xl font-semibold leading-tight">
                       {{ product.title | safe }}
                     </h2>
-                    <p class="text-base opacity-80">
-                    {%- for item in product.type -%}
-                      <span>{{ item }}</span>{{ ', ' if product.type.length > 1 and not loop.last }}
-                    {%- endfor -%}
+                    {# <p class="text-base">{{ product.ingress }}</p> #}
+                    <p class="pr-12 text-base opacity-80">
+                      {% for item in product.type %}
+                        <span>{{ item }}</span>,
+                      {% endfor %}
+                      {% for item in product.area %}
+                        <span>{{ item }}</span>{{ ', ' if loop.length > 1 and not loop.last }}
+                      {% endfor %}
                     </p>
                   </div>
-                    <button
-                      type="button"
-                      x-on:click="expanded = !expanded"
-                      class="absolute inset-0 flex items-center justify-end w-full pr-4 rounded-sm sm:rounded-lg group focus:outline-none focus-visible:ring focus-visible:ring-inset focus-visible:ring-blue-800 focus-visible:ring-offset-2 focus-visible:ring-offset-white"
-                      aria-expanded="false"
-                      x-bind:class="expanded ? 'ring ring-white' : 'fine:hover:ring fine:hover:ring-white'"
-                      x-bind:aria-expanded="expanded"
-                    >
-                      <span class="sr-only">Vis</span>
-                      {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('mr-1.5 w-5 h-5 opacity-50 transition duration-100 group-aria-expanded:rotate-180') | safe }}
-                    </button>
-
+                  <button
+                    type="button"
+                    x-on:click="expanded = !expanded"
+                    class="absolute inset-0 flex items-center justify-end w-full pr-3 rounded-sm sm:rounded-lg group focus:outline-none focus-visible:ring focus-visible:ring-inset focus-visible:ring-blue-800 focus-visible:ring-offset-2 focus-visible:ring-offset-white"
+                    aria-expanded="false"
+                    x-bind:class="expanded ? 'ring ring-white' : 'fine:hover:ring fine:hover:ring-white'"
+                    x-bind:aria-expanded="expanded"
+                  >
+                    <span class="sr-only">Vis</span>
+                    {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('mr-1.5 w-5 h-5 text-deepblue-400 fine:group-hover:text-deepblue-600 group-aria-expanded:text-deepblue-600 transition duration-100 group-aria-expanded:rotate-180') | safe }}
+                  </button>
                 </div>
 
-                <div class="pt-5 pb-8 px-clamp-gap relative min-h-[20vh] markdown sm:px-20 mb-4" x-bind:hidden="!expanded" hidden>
+                <div class="pt-5 pb-12 px-clamp-gap relative min-h-[20vh] markdown sm:pl-20 sm:pr-0 mb-8" x-bind:hidden="!expanded" hidden>
                   <p>{{ product.ingress }}</p>
 
                   {%- if product.contentBlocks -%}
                     {%- for block in product.contentBlocks -%}
                     {%- include "partials/contentBlocks.njk" -%}
                     {%- endfor -%}
+                  {%- else -%}
+                    <div class="mt-4 italic">
+                      <p>Innhold om søknader eller skjema er ikke lagt inn enda.</p>
+                    </div>
                   {%- endif -%}
                 </div>
               </div>
-              {%- endif -%}
             {%- endfor -%}
           </div>
+
           <div x-show="count === 0" class="p-6 py-8 text-center overflow-hidden grid items-center leading-snug rounded-lg bg-gray-100 min-h-[4.75rem] lg:col-span-6">
-            <p class="max-w-prose">Ingen søknader eller skjema er merket med denne kombinasjonen av type og rolle.</p>
+            <p class="max-w-prose">Ingen søknader eller skjema er merket med denne kombinasjonen av type og område.</p>
           </div>
+
+          <div class="p-4 mt-8 bg-orange-100 rounded-lg lg:px-6 lg:py-5">
+            <h3 class="text-xl font-semibold">
+              Klage eller anke på vedtak?
+            </h3>
+            <p class="mt-2 max-w-prose">Hvis du har fått et vedtak fra NAV og du er uenig i vedtaket, har du rett til å klage eller anke.</p>
+            <p class="mb-2 mt-7"><a href="#" class="underline text-deepblue-600 fine:hover:no-underline fine:hover:text-deepblue-700">Les mer om dine klagerettigheter</a>.</p>
+          </div>
+
         </div>
 
-        <div class="col-start-1 p-4 bg-orange-100 rounded-lg lg:px-6 lg:py-5 lg:col-start-2 lg:mt-8">
-          <h3 class="text-xl font-semibold">
-            Klage eller anke på vedtak?
-          </h3>
-          <p class="mt-2 max-w-prose">Hvis du har fått et vedtak fra NAV og du er uenig i vedtaket, har du rett til å klage eller anke.</p>
-          <p class="mb-2 mt-7"><a href="#" class="underline text-deepblue-600 fine:hover:no-underline fine:hover:text-deepblue-700">Les mer om dine klagerettigheter</a>.</p>
-        </div>
 
       </div>
     </div>
