--- a/src/pages/soknad/aap/aap-soknad.njk
+++ b/src/pages/soknad/aap/aap-soknad.njk
@@ -8,9 +8,9 @@
     alias: "step",
   },
   eleventyComputed: {
-    title: 'Søknad om dagpenger',
+    title: 'Søknad om arbeids&shy;avklarings&shy;penger (AAP)',
     stepTitle: "{{ step.title }}",
-    permalink: "/soknad-og-skjema/dagpenger/{{ step.title | slugify }}/",
+    permalink: "/soknad/aap/{{ step.title | slugify }}/",
     blocks: "{{ step.formBlocks }}"
   }
 }
@@ -23,7 +23,7 @@
 {% macro stepperList(formSteps) %}
   <ol class="navds-stepper">
     {%- for item in formSteps.slice(1, -1) -%}
-      <li class="navds-stepper__item {{ 'navds-stepper__item--active' if item.title === stepTitle }} {{ 'navds-stepper__item--complete' if item.state === 'complete' }}">
+      <li class="navds-stepper__item {{ 'navds-stepper__item--active' if item.title === step.title }} {{ 'navds-stepper__item--complete' if item.state === 'complete' }}">
         <span class="navds-stepper__line navds-stepper__line--1" aria-hidden="true"></span>
         <span class="navds-stepper__marker" aria-hidden="true">
           {%- if item.state === 'complete' -%}
@@ -33,7 +33,7 @@
           {%- endif -%}
         </span>
         {%- if item.link -%}
-          <a href="/soknad-og-skjema/dagpenger/{{ item.title | slugify }}/" class="navds-stepper__content">{{ item.title }}</a>
+          <a href="/soknad/aap/{{ item.title | slugify }}/" class="navds-stepper__content">{{ item.title }}</a>
         {%- else -%}
           <span class="navds-stepper__content">{{ item.title }}</span>
         {%- endif -%}
@@ -74,9 +74,9 @@
           {% if (pagination.pageNumber > 0) and (pagination.pageNumber < (formSteps.length - 1)) %}
             {# Stepper (mobile) #}
             <div class="mb-10 rounded-lg max-w-prose md:col-start-1 md:hidden">
-            <div class="relative px-3 py-2 rounded-md bg-deepblue-50">
+            <div class="relative py-2 rounded-md fine:hover:bg-deepblue-50">
               <h2 class="text-2xl font-semibold">{{ stepTitle | safe }}</h2>
-              <button class="absolute inset-0 flex items-start justify-end pl-3 pr-4 pt-3.5 text-blue-600 fine:hover:text-blue-800 rounded-md ring-2 ring-deepblue-50 fine:hover:ring-blue-500" x-on:click="stepperOpen = !stepperOpen">
+              <button class="absolute inset-0 flex items-start justify-end pr-0.5 pt-3.5 fine:hover:text-blue-800 rounded fine:hover:ring-12 fine:hover:ring-deepblue-50" x-on:click="stepperOpen = !stepperOpen">
                 <span class="sr-only">Vis seksjoner</span>
                 <svg class="flex-none w-6 h-6 -translate-y-px pointer-events-none" x-bind:class="stepperOpen && 'rotate-180'" width="24" height="24" viewBox="0 0 24 24" fill="none" aria-hidden="true" focusable="false" >
                   <path d="M18 9L12 15L6 9" stroke="currentColor" stroke-width="2" opacity="0.8" />
@@ -123,17 +123,17 @@
             </div>
 
             {# Navigation #}
-            <div class="grid gap-2 mt-12">
+            <div class="grid gap-2 mt-12 xs:flex">
               {% if pagination.pageNumber < (formSteps.length - 2) %}
-                <a href="/soknad-og-skjema/dagpenger/{{ pagination.page.next.title | slugify }}/" class="px-4 py-3 font-semibold leading-snug text-center text-white bg-blue-500 rounded fine:hover:bg-blue-600" type="button">Neste</a>
+                <a href="/soknad/aap/{{ pagination.page.next.title | slugify }}/" class="px-8 py-3 font-semibold leading-snug text-center text-white bg-blue-500 rounded fine:hover:bg-blue-600" type="button">Neste steg</a>
               {% endif %}
 
               {% if (pagination.pageNumber > 1) %}
-                <a href="/soknad-og-skjema/dagpenger/{{ pagination.page.previous.title | slugify }}/" class="px-4 py-3 font-semibold leading-snug text-center text-blue-500 bg-white rounded fine:hover:bg-blue-50 ring-2 ring-inset ring-blue-500" type="button">Forrige</a>
+                <a href="/soknad/aap/{{ pagination.page.previous.title | slugify }}/" class="px-8 py-3 font-semibold leading-snug text-center text-blue-500 bg-white rounded fine:hover:bg-blue-50 ring-2 ring-inset ring-blue-500" type="button">Forrige steg</a>
               {% endif %}
 
               {% if pagination.page.previous %}
-                <a class="px-4 py-3 font-semibold leading-snug text-center rounded fine:hover:bg-blue-50" href="/soknad-og-skjema/dagpenger/">Avbryt …</a>
+                <a class="px-8 py-3 font-semibold leading-snug text-center rounded fine:hover:bg-blue-50" href="/soknad/aap/">Avbryt</a>
               {% endif %}
             </div>
           </div>
