--- a/src/pages/soknad/dagpenger/dagpenger.njk
+++ b/src/pages/soknad/dagpenger/dagpenger.njk
@@ -3,7 +3,7 @@ type: 'Mellomsteg'
 title: 'Søk om dagpenger'
 kicker: 'Søknad'
 tags: ['template']
-permalink: "/soknad-og-skjema/{{ page.fileSlug }}/"
+permalink: "/soknad/{{ page.fileSlug }}/"
 order: 7
 fileList:
   -
@@ -176,7 +176,7 @@ fileList:
               <a
                 x-show="(applicationStep === 2) || (applicationFormat === 'digital')"
                 class="inline-flex px-6 py-2.5 text-white bg-blue-500 fine:hover:bg-blue-600 rounded focus-visible:outline-none focus-visible:ring focus-visible:ring-blue-800 focus-visible:ring-offset-1 focus-visible:ring-offset-white"
-                href="/soknad-og-skjema/dagpenger/intro/"
+                href="/soknad/dagpenger/intro/"
               >Neste</a>
               <button
                 x-show="(applicationStep === 2) || (applicationStep === 3)"
